# python-problems-bot

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.test.yml  docker-compose.yml  filebeat.yml  json_editor.py  package-lock.json  pyproject.toml  ruff.toml  run.py  run_app.py  run_scheduler.py  settings.py
.github/workflows/: main.yml  pull-request.yml  push-branch.yml
app/: data_formats.py  main.py
app/templates/: base.html  code.html  error.html  main.html  question.html
backend/: .dockerignore  Dockerfile  pyproject.toml  run_app.py  run_scheduler.py  settings.py
backend/migrations/: 20231130215747_add_advices.up.sql  20240916215618_external_id_unique.up.sql  20240927141936_add_code_block_column.up.sql  20240928210810_add_questions_order.up.sql
backend/src/: images.py  texts.py
backend/tests_functional/: conftest.py
bot/: bot.py
bot/handlers/: code.py  comands.py  commands.py  error.py  onboarding.py  payment.py  questions.py  states.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
migrations/: 20230822214900_init.down.sql  20230822214900_init.up.sql  20231001090618_add-payments-column.up.sql  20231005175213_add-question-levels.up.sql  20231015175654_user-status.up.sql  20231130215747_add_advices.up.sql  20240110195943_add_coding_questions.up.sql  20240329105054_add-achievements.up.sql  20240918173200_add_from_interview_column.up.sql
src/: images.py  texts.py
src/api/: app.py  depends.py  security.py
src/bot/: bot.py
src/models/: questions.py  users.py
src/services/: achievements.py  advices.py  (+5 more)
tasks/: send_advices.py  send_questions.py
tests_functional/: conftest.py  test_settings.py  utils.py
tools/: get_session_for_tests.py
(+127 files in other folders)
