[tool.poetry]
name = "python-problems-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "python_problems_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
pydantic = "^2.2.1"
pydantic-settings = "^2.0.3"
asyncpg = "^0.28.0"
ptbcontrib = {git = "https://github.com/python-telegram-bot/ptbcontrib.git", rev = "main"}
sqlalchemy = "^2.0.20"
psycopg2-binary = "^2.9.7"
apscheduler = "^3.10.4"
python-telegram-bot = "^20.5"



[tool.poetry.group.dev.dependencies]
ruff = "^0.0.287"
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
telethon = "^1.30.2"
pytest-mock = "^3.11.1"

[tool.aerich]
tortoise_orm = "settings.TORTOISE_CONFIG"
location = "./migrations"
src_folder = "./."
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
